# pysdk

./: .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.txt  Makefile  NOTICE  NOTICE.md  README.md  README.rst  SECURITY.md  buf.gen.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: api_update.yml  ci.yml  pre-commit-autoupdate.yml  release.yml  semgrep.yml
docs/: apiReference.html  apidocs-help.html  classIndex.html  conf.py  index.html  index.rst  moduleIndex.html  nameIndex.html  nebius.aio._cleaner.CleaningInterceptor.html  nebius.aio._cleaner.html  nebius.aio.abc.ClientChannelInterface.html  nebius.aio.abc.SyncronizerInterface.html  nebius.aio.abc.html  nebius.aio.authorization.authorization.Authenticator.html  nebius.aio.authorization.authorization.Provider.html  nebius.aio.authorization.authorization.html  nebius.aio.authorization.html  nebius.aio.authorization.interceptor.AuthorizationInterceptor.html  nebius.aio.authorization.interceptor.html  nebius.aio.authorization.token.TokenAuthenticator.html  nebius.aio.authorization.token.TokenProvider.html  nebius.aio.authorization.token.html  nebius.aio.base.ChannelBase.html  nebius.aio.base.html  nebius.aio.channel.Channel.html  nebius.aio.channel.LoopError.html  nebius.aio.channel.NebiusUnaryUnaryMultiCallable.html  nebius.aio.channel.NoCredentials.html  nebius.aio.channel.html  nebius.aio.client.Client.html  nebius.aio.client.html  nebius.aio.html  nebius.aio.idempotency.IdempotencyKeyInterceptor.html  nebius.aio.idempotency.html  nebius.aio.operation.Operation.html  nebius.aio.operation.Static.html  nebius.aio.operation.html  nebius.aio.request.Request.html  nebius.aio.request.RequestError.html  nebius.aio.request.RequestIsCancelledError.html  (+1612 more)
docs/reference/: apiReference.html  apidocs-help.html  classIndex.html  index.html  moduleIndex.html  nameIndex.html  nebius.aio._cleaner.CleaningInterceptor.html  nebius.aio._cleaner.html  nebius.aio.abc.ClientChannelInterface.html  nebius.aio.abc.SyncronizerInterface.html  nebius.aio.abc.html  nebius.aio.authorization.authorization.Authenticator.html  nebius.aio.authorization.authorization.Provider.html  nebius.aio.authorization.authorization.html  nebius.aio.authorization.html  nebius.aio.authorization.interceptor.AuthorizationInterceptor.html  nebius.aio.authorization.interceptor.html  nebius.aio.authorization.token.TokenAuthenticator.html  nebius.aio.authorization.token.TokenProvider.html  nebius.aio.authorization.token.html  nebius.aio.base.ChannelBase.html  nebius.aio.base.html  nebius.aio.channel.Channel.html  nebius.aio.channel.LoopError.html  nebius.aio.channel.NebiusUnaryUnaryMultiCallable.html  nebius.aio.channel.NoCredentials.html  nebius.aio.channel.html  nebius.aio.client.Client.html  nebius.aio.client.html  nebius.aio.html  nebius.aio.idempotency.IdempotencyKeyInterceptor.html  nebius.aio.idempotency.html  nebius.aio.operation.Operation.html  nebius.aio.operation.Static.html  nebius.aio.operation.html  nebius.aio.request.Request.html  nebius.aio.request.RequestError.html  nebius.aio.request.RequestIsCancelledError.html  nebius.aio.request.RequestIsSentError.html  nebius.aio.request.RequestSentNoCallError.html  (+1647 more)
docs/templates/: apiReference.html  apidocs-help.html  apidocs.css  extra.css  footer.html  head.html  index.html  sidebar-list.html  sidebar.html  summary.html
nebius_generator/: __init__.py  annotations.py  bootstrap.py  capture.py  coordinator.py  descriptors.py  docs.py  emitter.py  errors.py  generators.py  main.py  model.py  options.py  pygen.py  well_known.py
nebius_generator/_bootstrap/: __init__.py  annotations_pb2.py
scripts/: bootstrap_generator.py  check_installed_typing.py  generate_api.py
src/compiler/: main.py  mover.py  pygen.py
src/mover/: mover.py
src/nebius/: __init__.py  channel.py  sandbox.py  sdk.py  skeleton.py
src/nebius/aio/: _cleaner.py  _metadata_type.py  abc.py  base.py  channel.py  cli_config.py  client.py  constant_channel.py  idempotency.py  keepalive.py  metrics.py  operation.py  operation_service.py  request.py  request_kwargs.py  request_status.py  route.py  service_descriptor.py  service_error.py  static_channel.py  stream.py
src/nebius/aio/authorization/: interceptor.py  token.py
src/nebius/aio/token/: exchangeable.py  federated_credentials.py  federation_account.py  file.py  impersonated.py  renewable.py  service_account.py  static.py  token.py
src/nebius/api/: _registry.py  _registry_fragment.py
src/nebius/api/nebius/: __init__.py  (+6 more)
src/nebius/base/: _service_error.py  constants.py  fieldmask.py  fieldmask_protobuf.py  metadata.py  methods.py  options.py  resolver.py  sanitization.py  service_error.py  tls_certificates.py  version.py
src/scripts/: tag_version.sh  version_updater.py
templates/: all-documents.html  common.html  nameIndex.html  nav.html  pydoctor.js  search.js
tests/: conftest.py  grpc_service.py  test_async_calls.py  test_cli_config_authorization.py  test_compatibility_facades.py  test_config_loading.py  test_credentials.py  test_direct_containers.py  test_direct_enum.py  test_direct_json.py  test_direct_message.py  test_direct_reflection.py  test_direct_registry.py  test_direct_well_known_json.py  test_error_handling.py  test_extensions.py  test_fieldmask.py  test_generated_imports.py  test_generator_method_behavior.py  test_keepalive_metrics.py  test_methods.py  test_metrics_scheduling.py  test_mover.py  test_progress_tracker.py  test_revamp_compatibility.py  test_routes.py  test_skeleton.py  test_smoke.py  test_streaming.py  test_stubs_and_resolver.py  test_sync_calls.py  test_updates_and_masks.py  test_well_known_presence.py  test_wire_codec.py
tests/generator/: synthetic_service.py  test_bootstrap.py  test_direct_generator.py  test_direct_namespace.py  test_generate_api_script.py  test_method_behavior.py  test_mover.py  test_options.py  test_pygen.py  test_synthetic_service.py  test_typing.py
tests/generator/typing/: invalid.py  valid.py
(+777 files in other folders)
