[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nebius"
version = "0.2.0"
description = "Nebius Python SDK"
authors = [
    { name = "Daniil Drizhuk", email = "complynx@nebius.com" },
    { name = "Ivan Kornilov", email = "ivan.kornilov@nebius.com"},
    { name = "Marat Reymers", email = "marat-reymers@nebius.com"},
    { name = "Andrei Zenkov", email = "andrei.zenkov@nebius.com"}
]
license = { text = "MIT" }
dependencies = [
    # added a dep, add the notice!
    "cryptography>=40.0.0",
    "grpcio>=1.56.2",
    "PyJWT>=2.0.0",
    "certifi>=2022.6.15",
    "protobuf>=5.29.1",
    "grpcio-status>=1.56.2",
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
windows = ["certifi-win32"]  # to use windows certificates
dev = [
    # added a dep, add the notice!
    # don't forget to mirror some of these to tox config in this file
    "pytest>=8.0",  # For running tests
    "pytest-asyncio>=0.24.0",  # For running async tests
    "tox>=4.0",     # For testing automation
    "mypy>=1.13",    # For type checking
    "black>=24.10",  # For code formatting
    "ruff>=0.7",   # For linting
    "grpc-stubs>=1.53",  # For mypy
    "types-protobuf>=5.29.1", # for mypy
]
genproto = [
    # added a dep, add the notice!
    "grpcio-tools>=1.56.2",
    "mypy-protobuf>=3.6",
    "protovalidate>=0.5",
]
gendoc = [
    # added a dep, add the notice!
    "pydoctor>=24.11.2",
    "beautifulsoup4>=4.12.3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = "(docs|src/nebius/api|.direnv|.eggs|.git|.hg|.ipynb_checkpoints|.mypy_cache|.nox|.pytest_cache|.ruff_cache|.tox|.svn|.venv|.vscode|pypackages|_build|buck-out|build|dist|venv)"

[tool.mypy]
strict = true
exclude = "^src/nebius/api/.*"
files = ["!src/nebius/api/buf/validate/validate_pb2.pyi"]

[[tool.mypy.overrides]]
module = "nebius.api.*"
ignore_errors = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "docs",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "src/nebius/api",
]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "Q", "S"]
ignore = []
exclude = ["src/nebius/api"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S"]
"src/nebius/api/**" = ["ALL"]

[tool.ruff.format]
exclude = ["src/nebius/api/**", "*.pyi"]

[tool.isort]
profile = "black"

[tool.pylint]
load-plugins = ["pylint.extensions.mccabe"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.tox]
requires = ["tox>=4.23"]
env_list = ["test", "test_earliest", "lint", "type", "format"]
isolated_build = true

[tool.tox.env]
[tool.tox.env.test]
description = "Run tests with pytest"
deps = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "grpcio",
    "protobuf",
    "types-protobuf",
]
commands = [["pytest","-vv"]]

[tool.tox.env.test_earliest]
description = "Run tests with pytest and the earliest possible lib versions"
requires_python = "<=3.11"
deps = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "grpcio==1.56.2",
    "protobuf<=5.26.1",
    "types-protobuf<=5.26.1",
    "cryptography==37.0.4",
    "PyJWT==2.0.0",
    "certifi==2022.6.15",
    "grpcio-status==1.56.2",
]
commands = [["pytest","-vv"]]

[tool.tox.env.lint]
description = "Run linter checks"
package = "skip"  # Skip installing the package
deps = ["ruff"]
commands = [["ruff","check","src/","tests/"]]

[tool.tox.env.format]
description = "Run code formatting checks"
package = "skip"
deps = ["black"]
commands = [["black","--check","src/"]]

[tool.tox.env.type]
description = "Run type-checking"
package = "skip"
deps = [
    "mypy",
    "cryptography==40.0.0",
    "grpcio>=1.56.2",
    "PyJWT>=2.9.0",
    "certifi>=2024.8.30",
    "protobuf>=5.29.1",
    "grpcio-status>=1.56.2",
    "pydoctor>=24.11.2",
    "beautifulsoup4>=4.12.3",
    # For mypy
    "grpc-stubs>=1.53",
    "types-protobuf>=5.29.1",
    "types-beautifulsoup4>=4.12.0",
]
commands = [["mypy","src/"]]

[tool.pydoctor]
add-package = ["src/nebius"]
project-name="nebius"
html-output="docs"
template-dir="templates"
project-url="https://github.com/nebius/pysdk"
html-base-url="https://nebius.github.io/pysdk"
html-writer="nebius.base.gendoc.writer.TemplateWriter"
html-viewsource-base="https://github.com/nebius/pysdk/tree/main"
intersphinx = ["https://docs.python.org/3/objects.inv"]
privacy = [
    "PRIVATE:nebius.api.nebius.common.*.OperationServiceClient",
    "PRIVATE:nebius.api.buf",
    "HIDDEN:nebius.api.nebius.example.**",
    "HIDDEN:nebius.api.nebius.example",
    "PRIVATE:nebius.base.gendoc",
    "PRIVATE:nebius.api.**_pb2",
    "PRIVATE:nebius.api.**_pb2_grpc",
]
